web/modules/custom/it_route_trip_tools/assets/css/it-route-trip-tools.css
/* ... */
.table-navigation-buttons .left-table-button:hover:active,
.table-navigation-buttons .right-table-button:hover:active {
  background: #424d51;
  border: 0 !important;
  color: #fff;
  outline: 0;
}
.table-navigation-buttons .left-table-button:active,
.table-navigation-buttons .right-table-button:active {
  background: #424d51;
  border: 0 !important;
  color: #fff;
  outline: 0;
}
.table-navigation-buttons .left-table-button:focus,
.table-navigation-buttons .right-table-button:focus {
  background: #DE7C00;
  border: 0 !important;
  color: #fff;
  outline: 0;
}
.table-navigation-buttons .left-table-button[disabled],
.table-navigation-buttons .right-table-button[disabled] {
  display: none;
}
.table-navigation-buttons .left-table-button[disabled]:hover,
.table-navigation-buttons .right-table-button[disabled]:hover {
  display: none;
}
#inbound-large-screen-route-table,
#outbound-large-screen-route-table {
  margin-top: 0;
  clear: both;
}
#inbound-large-screen-route-table table.table,
#outbound-large-screen-route-table table.table {
  width: auto !important;
  border-collapse: collapse;
  border: none;
  display: block;
  overflow-y: hidden;
  /*overflow-y: scroll;
      height: 90vh;
      */
}
#inbound-large-screen-route-table table.table thead tr th,
#outbound-large-screen-route-table table.table thead tr th {
  text-align: center;
}
#inbound-large-screen-route-table table.table thead tr th h2,
#outbound-large-screen-route-table table.table thead tr th h2 {
  font-size: 1.8rem;
  color: #fff;
  font-weight: 700;
  margin: 0;
  padding: 0;
  line-height: 2.4rem;
  width: 200px;
}
@media screen and (max-width: 991px) {
  #inbound-large-screen-route-table table.table thead tr th h2,
  #outbound-large-screen-route-table table.table thead tr th h2 {
    width: 100px;
  }
}
#inbound-large-screen-route-table table.table thead tr th.rotate,
#outbound-large-screen-route-table table.table thead tr th.rotate {
  height: 100px;
  margin-bottom: 20px;
  border-left: 0;
  border-right: 0;
}
#inbound-large-screen-route-table table.table thead tr th.rotate > div,
#outbound-large-screen-route-table table.table thead tr th.rotate > div {
  transform: translate(35px, -5px) rotate(315deg);
  width: 100px;
  margin-bottom: 20px;
}
#inbound-large-screen-route-table table.table thead tr th.rotate > div > span,
#outbound-large-screen-route-table table.table thead tr th.rotate > div > span {
  padding: 0;
}
#inbound-large-screen-route-table table.table tbody td,
#outbound-large-screen-route-table table.table tbody td {
  text-align: right;
}
/*#inbound-large-screen-route-table table.table tbody tr th,*/
/*#outbound-large-screen-route-table table.table tbody tr th {*/
/*  !*border-left: 35px solid #80D80E;*!*/
/*  padding-left: 35px;*/
/*}*/
/*#inbound-large-screen-route-table table.table tbody tr.timepoint th:before,*/
/*#outbound-large-screen-route-table table.table tbody tr.timepoint th:before {*/
/*  content: '\f219';*/
/*  font-family: "Font Awesome 5 Pro";*/
/*  color: #fff;*/
/*  position: absolute;*/
/*  left: 0;*/
/*  font-weight: 700;*/
/*  font-size: 1.5rem;*/
/*  margin-top: -7px;*/
/*  padding-top: 5px;*/
/*  padding-left: 2px;*/
/*  background-color: #80D80E;*/
/*  background-size: cover;*/
/*  height: 103%;*/
/*  margin-left: -2px;*/
/*  padding-left: 4px;*/
/*  width: 21px;*/
/*}*/
/*#inbound-large-screen-route-table table.table tbody tr.non-timepoint th:before,*/
/*#outbound-large-screen-route-table table.table tbody tr.non-timepoint th:before {*/
/*  content: '\f111';*/
/*  font-family: "Font Awesome 5 Pro";*/
/*  color: #fff;*/
/*  position: absolute;*/
/*  left: 0;*/
/*  font-weight: 700;*/
/*  font-size: 1.1rem;*/
/*  margin-top: -7px;*/
/*  padding-top: 9px;*/
/*  background-color: #80D80E;*/
/*  background-size: cover;*/
/*  height: 103%;*/
/*  margin-left: -2px;*/
/*  padding-left: 5px;*/
/*  width: 21px;*/
/*}*/
#all-routes-container {
  margin-top: 40px;
}

#all-routes-container #all-routes-map h3 {
  font-size: 1.8rem;
  padding: 0;
  margin: 0;
}
#all-routes-container #all-routes-map a {
  font-size: 1.6rem;
}
#all-routes-container #all-routes-map a:focus {
  padding: 4px;
}
.dir-control-buttons,
.stop-control-buttons {
  float: right;
  /*WW Trying all sorts of switches, remind her to clean this up :-) */
}
.dir-control-buttons h2,
.stop-control-buttons h2 {
  font-size: 2rem;
  line-height: 2.5rem;
  color: #002F87;
  font-weight: 700;
}
@media screen and (max-width: 991px) {
  .dir-control-buttons,
  .stop-control-buttons {
    position: relative !important;
    float: left;
    margin: 15px;
  }
}
.dir-control-buttons .dir-control-button,
.stop-control-buttons .dir-control-button,
.dir-control-buttons .stop-control-button,
.stop-control-buttons .stop-control-button {
  /* width: 240px;*/
  height: 40px;
}
.dir-control-buttons .dir-control-button button,
.stop-control-buttons .dir-control-button button,
.dir-control-buttons .stop-control-button button,
.stop-control-buttons .stop-control-button button {
  background-color: #003087;
}
.dir-control-buttons .dir-control-button button:hover,
.stop-control-buttons .dir-control-button button:hover,
.dir-control-buttons .stop-control-button button:hover,
.stop-control-buttons .stop-control-button button:hover {
  background-color: #424d51;
}
.dir-control-buttons .dir-control-button input#direction,
.stop-control-buttons .dir-control-button input#direction,
.dir-control-buttons .stop-control-button input#direction,
.stop-control-buttons .stop-control-button input#direction,
.dir-control-buttons .dir-control-button input#stop,
.stop-control-buttons .dir-control-button input#stop,
.dir-control-buttons .stop-control-button input#stop,
.stop-control-buttons .stop-control-button input#stop {
  /*Unchecked State*/
}
/* ... */

